[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/grid_visualizer.gd" type="Script" id=1]
[ext_resource path="res://scripts/grid.gd" type="Script" id=2]
[ext_resource path="res://scripts/GridFluids.gdns" type="Script" id=3]
[ext_resource path="res://scripts/pressure_visualizer.gd" type="Script" id=4]
[ext_resource path="res://scripts/density_visualizer.gd" type="Script" id=5]

[node name="Grid" type="Node2D"]
script = ExtResource( 2 )

[node name="grid_visualizer" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="vector_visualizer" type="Node2D" parent="."]
visible = false

[node name="native_lib" type="Node2D" parent="."]
visible = false
script = ExtResource( 3 )

[node name="pressure_visualizer" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="density_visualizer" type="Node2D" parent="."]
script = ExtResource( 5 )
